[tool.poetry]
name = "hoot-engine"
version = "0.1.0"
description = ""
authors = ["Matt Koh <matt.koh@openlabsusa.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
pillow = "^10.4.0"
numpy = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.4"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
